[tool.poetry]
name = "crossair"
version = "0.1.0"
description = ""
authors = ["SerpentBit"]

[tool.poetry.dependencies]
python = "^3.10"
ovl = "^2022.1.3"
opencv-python = "^4.5.5"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
structlog = "^21.5.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
