[tool.poetry]
name = "crossair"
version = "0.1.0"
description = ""
authors = ["SerpentBit"]

[tool.poetry.dependencies]
python = "^3.10"
ovl = "^2022.1.3"
opencv-python = "^4.5.5"
fastapi = "^0.85.0"
uvicorn = "^0.18.0"
structlog = "^22.1.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
